# nextjs_fastapi

./: .gitignore  pyproject.toml  requirements.txt  sql_app.db
api/: index.py
api/core/: config.py  hashing.py
api/database/: base.py  base_class.py  session.py
api/database/models/: trades.py  users.py
app/: layout.tsx  page.tsx
