[tool.poetry]
name = "nextjs-fastapi"
version = "0.1.0"
description = ""
authors = ["Jeremiah <jgitaga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.100.1"
uvicorn = {version = "0.23.2", extras = ["standard"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
